Updated approach